@@ -68,6 +68,9 @@ IN DEVELOPMENT
       still in ``.bzr.log`` and can be shown with ``-Derror``.
       (Martin Pool, #240161)
 
+    * Fetch from a stacked branch copies all required data.
+      (Aaron Bentley, #248506)
+
     * Handle urls such as ftp://user@host.com@www.host.com where the user
       name contains an @.
       (Neil Martinsen-Burrell, #228058)
